"Setting page is updated by fragments"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="WildfireAnalysisAndPredictionSystem.test2" >
+    package="WildfireAnalysisAndPredictionSystem.test2">
 
     <application
         android:allowBackup="true"
@@ -8,12 +8,10 @@
         android:label="Wildfire System"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Test2" >
-        <activity
-            android:name=".SideBar"
-            android:exported="false"
-            android:label="@string/title_activity_side_bar"
-            android:theme="@style/Theme.Test2.NoActionBar" />
+        android:theme="@style/Theme.Test2">
+
+        <activity android:name=".NavDrawer"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity
             android:name=".SettingsPageActivity"
             android:exported="true" />
@@ -40,7 +38,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
