--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="WildfireAnalysisAndPredictionSystem.test2">
+    package="WildfireAnalysisAndPredictionSystem.test2" >
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,10 @@
         android:label="Wildfire System"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Test2">
+        android:theme="@style/Theme.Test2" >
+        <activity
+            android:name=".FavCounties"
+            android:exported="false" />
         <activity
             android:name=".SendEmailActivity"
             android:exported="true" />
@@ -32,7 +35,7 @@
             android:exported="true" />
         <activity
             android:name=".SignInPageActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
